--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "portfolio",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Regina's portfolio website",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
@@ -14,9 +14,18 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "gatsby": "^4.12.1",
+    "gatsby-plugin-react-helmet": "^5.12.1",
+    "gatsby-plugin-sass": "^5.12.1",
+    "gatsby-source-contentful": "^7.10.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-bootstrap": "^2.3.0",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-vertical-timeline-component": "^3.5.2",
+    "sass": "^1.50.1"
   },
   "devDependencies": {
     "prettier": "^2.6.2"
