--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "engines": {
+    "node": "16.14.2",
+    "npm": "8.7.0"
   }
 }
