--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "gatsby": "^4.12.1",
+    "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-sass": "^5.12.1",
+    "gatsby-plugin-sharp": "^4.13.0",
     "gatsby-source-contentful": "^7.10.1",
+    "gatsby-source-filesystem": "^4.13.0",
+    "gatsby-transformer-sharp": "^4.13.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.1",
